@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.9-21
-Date: 2016-12-11
+Date: 2016-12-17
 Title: Analysis of Oceanographic Data
 Authors@R: c(person(given="Dan", family="Kelley", email="Dan.Kelley@Dal.Ca", role=c("aut", "cre")),
  person(given="Clark", family="Richards", email="clark.richards@gmail.com", role=c("aut")),
@@ -24,7 +24,8 @@ Suggests:
     rgdal (>= 1.1-9),
     R.utils,
     testthat,
-    knitr
+    knitr,
+    lubridate
 BugReports: https://github.com/dankelley/oce/issues
 Description: Supports the analysis of Oceanographic data, including 'ADCP'
     measurements, measurements made with 'argo' floats, 'CTD' measurements,
