@@ -62,39 +62,40 @@ NULL
 #' Certain functions and function arguments are still provided for
 #' compatibility with older versions of \sQuote{oce}, but will be removed soon.
 #' The \sQuote{oce} scheme for removing functions is similar to that used by
-#' \sQuote{Bioconductor}: items are marked as "deprecated" in one release, as
-#' "defunct" in the next, and then removed entirely. This goal is to provide a
+#' \sQuote{Bioconductor}: items are marked as "deprecated" in one release, marked as
+#' "defunct" in the next, and removed in the next after that. This goal is to provide a
 #' gentle migration path for users who keep their packages reasonably
 #' up-to-date.
 #'
 #' Several \sQuote{oce} functions are marked "deprecated" in the present
 #' release of oce. Please use the replacement functions as listed below.
+#' The next CRAN release of \sQuote{oce} will designate these functions as
+#' "defunct".
 #'
 #' \tabular{lll}{
-#' \strong{Deprecated}    \tab \strong{Replacement}     \tab \strong{Notes}\cr
-#' \code{mapZones}        \tab \code{\link{mapGrid}}    \tab Improve name sensibility\cr
-#' \code{mapMeridians}    \tab \code{\link{mapGrid}}    \tab Improve name sensibility\cr
-#' \code{addColumn}       \tab \code{\link{oceSetData}} \tab Deprecated 2016-08-01\cr
-#' \code{oce.magic}       \tab \code{\link{oceMagic}}   \tab Deprecated 2016-09-01\cr
-#' \code{ctdAddColumn}    \tab \code{\link{oceSetData}} \tab Deprecated 2016-11-11\cr
-#' \code{ctdUpdateHeader} \tab -                        \tab Deprecated 2016-11-11\cr
+#' \strong{Deprecated}    \tab \strong{Replacement}              \tab \strong{Notes}\cr
+#' \code{mapZones}        \tab \code{\link{mapGrid}}             \tab Deprecated 2016-02-13\cr
+#' \code{mapMeridians}    \tab \code{\link{mapGrid}}             \tab Deprecated 2016-02-13\cr
+#' \code{addColumn}       \tab \code{\link{oceSetData}}          \tab Deprecated 2016-08-01\cr
+#' \code{oce.magic}       \tab \code{\link{oceMagic}}            \tab Deprecated 2016-09-01\cr
+#' \code{ctdAddColumn}    \tab \code{\link{oceSetData}}          \tab Deprecated 2016-11-11\cr
+#' \code{ctdUpdateHeader} \tab -                                 \tab Deprecated 2016-11-11\cr
+#' \code{oce.as.POSIXlt}  \tab \code{\link[lubridate]{parse_date_time}} \tab Deprecated 2016-12-17\cr
 #' }
 #'
-#' The next CRAN release of \sQuote{oce} will have these functions flagged as
-#' "defunct", which will mean that trying to use them will generate an error
-#' and a hint as to the replacement function.
 #'
-#' The following are marked "defunct", which means that calling them in the
-#' present version of oce will produce an error, and that they will be removed
-#' altogether in the next oce release on CRAN.
+#' The following are marked "defunct", so calling them in the
+#' the present version produces an error message that hints at a replacement
+#' function. Once a function is marked "defunct" on one CRAN release, it will
+#' be slated for outright deletion in the following release.
 #'
 #' \tabular{lll}{
 #' \strong{Defunct}   \tab \strong{Replacement}     \tab \strong{Notes}\cr
 #' \code{makeSection} \tab \code{\link{as.section}} \tab Improve utility and name sensibility\cr
-#' \code{columns}     \tab \code{\link{read.ctd}}   \tab Unnecessary, and never worked\cr
+#' \code{columns}     \tab \code{\link{read.ctd}}   \tab Unnecessary; never worked\cr
 #'}
 #'
-#' Several \sQuote{oce} function arguments are considered defunct, which
+#' Several \sQuote{oce} function arguments are considered "defunct", which
 #' means they will be removed in the next CRAN release. They are as follows.
 #'
 #' \itemize{
@@ -974,26 +975,24 @@ oce.plot.ts <- function(x, y, type="l", xlim, ylim, xlab, ylab,
 }
 
 
-#' Oce Variant of as.POSIXlt
+#' Oce Variant of as.POSIXlt [deprecated]
 #'
-#' Used in parsing headers, this function is built on the standard
-#' \code{\link{as.POSIXlt}} function.  the only difference is that this also
-#' recognizes dates of forms such as \code{"2002 100 1430"} (year day hhmm),
-#' \code{"Aug 23 2002"}, \code{"August 23 2002"}, \code{"2002 Aug 23"}, and
-#' \code{"2002 23 Aug"}.  (The month may appear in abbreviated form or written
-#' in full, and may be capitalized or not.)
+#' \strong{WARNING:} This function will be removed soon; see \link{oce-deprecated}.
+#' It was realized in December of 2016 that this function was not used within
+#' oce, and also that \code{\link[lubridate]{parse_date_time}} in the
+#' \CRANpkg{lubridate} package was superior and therefore a better choice for
+#' \dQuote{oce} users.
 #'
 #' @param x a date, as for \code{as.POSIXlt}, but also including forms in which
 #' the month name appears.
 #' @param tz the timezone, as for \code{as.POSIXlt}
 #' @return A POSIXlt object.
-#' @examples
-#' oce.as.POSIXlt("2016-11-06")
 #' @author Dan Kelley
-#' @seealso \code{\link{as.POSIXlt}}, from which this is derived.
-#' @family things related to time
+#' @family functions that will be removed soon
 oce.as.POSIXlt <- function (x, tz = "")
 {
+    .Deprecated("lubridate::parse_date_time",
+                msg="oce.as.POSIXlt() will be removed soon; see ?'oce-deprecated'.")
     fromchar <- function(x)
     {
         xx <- x[1]
