@@ -43,6 +43,6 @@ The Seabird CTD instrument is described at
 \seealso{
 Other functions that will be removed soon: \code{\link{addColumn}},
   \code{\link{ctdAddColumn}}, \code{\link{mapMeridians}},
-  \code{\link{mapZones}}
+  \code{\link{mapZones}}, \code{\link{oce.as.POSIXlt}}
 }
 
