@@ -40,6 +40,7 @@ Dan Kelley
 \seealso{
 Other functions that will be removed soon: \code{\link{addColumn}},
   \code{\link{ctdAddColumn}},
-  \code{\link{ctdUpdateHeader}}, \code{\link{mapMeridians}}
+  \code{\link{ctdUpdateHeader}},
+  \code{\link{mapMeridians}}, \code{\link{oce.as.POSIXlt}}
 }
 
