@@ -34,7 +34,6 @@ Dan Kelley
 Other things related to time: \code{\link{ctimeToSeconds}},
   \code{\link{julianCenturyAnomaly}},
   \code{\link{julianDay}}, \code{\link{numberAsPOSIXct}},
-  \code{\link{oce.as.POSIXlt}},
   \code{\link{secondsToCtime}},
   \code{\link{unabbreviateYear}}
 }
