@@ -88,7 +88,6 @@ Dan Kelley
 Other things related to time: \code{\link{ctimeToSeconds}},
   \code{\link{julianCenturyAnomaly}},
   \code{\link{julianDay}}, \code{\link{numberAsHMS}},
-  \code{\link{oce.as.POSIXlt}},
   \code{\link{secondsToCtime}},
   \code{\link{unabbreviateYear}}
 }
