@@ -1,6 +1,7 @@
 0.9-21
+- deprecate oce.as.POSIXlt()
 - code cleanup (for lintr warnings)
-- more flexible unit specification in oceSetData()
+- improve oceSetData() unit specification
 - fix memory-usage error in coastlineCut()
 
 0.9-20
